--- a/autospec-app/src/main/resources/static/index.html
+++ b/autospec-app/src/main/resources/static/index.html
@@ -116,8 +116,8 @@
 
         <div>
           <label for="image">Product Image (optional)</label>
-          <input id="image" class="file" type="file" accept="image/*" />
-          <div class="hint">Adding an image can improve type detection and attribute confidence.</div>
+          <!-- minimal change: allow multiple -->
+          <input id="image" class="file" type="file" accept="image/*" multiple />
         </div>
 
         <button class="btn lg block" id="runBtn">🚀 Run extraction now</button>
@@ -169,7 +169,7 @@
   const rawEl = document.getElementById('rawInput');
   const runBtn = document.getElementById('runBtn');
   const fetchBtn = document.getElementById('fetchBtn');
-  const imageEl = document.getElementById('image'); // <-- added
+  const imageEl = document.getElementById('image'); // <-- now supports multiple
 
   const inStatus = document.getElementById('inStatus');
   const outStatus = document.getElementById('outStatus');
@@ -226,7 +226,7 @@
     scoreEl.textContent = score;
   }
 
-  // helper: read selected image as Data URL (base64)
+  // (kept for compatibility, not used now)
   function readSelectedImageAsDataURL(){
     const f = imageEl?.files && imageEl.files[0];
     if(!f) return Promise.resolve("");
@@ -236,6 +236,19 @@
       reader.onerror = reject;
       reader.readAsDataURL(f);
     });
+  }
+
+  // helper: read all selected images as Data URLs (base64)
+  async function readSelectedImagesAsDataURLs(){
+    const files = imageEl?.files ? Array.from(imageEl.files) : [];
+    if (!files.length) return [];
+    const readers = files.map(f => new Promise((resolve, reject) => {
+      const reader = new FileReader();
+      reader.onload = () => resolve(reader.result || "");
+      reader.onerror = reject;
+      reader.readAsDataURL(f);
+    }));
+    return Promise.all(readers);
   }
 
   async function runExtraction(){
@@ -250,13 +263,13 @@
     inStatus.textContent = 'Preparing request…';
 
     try{
-      // NEW: capture uploaded image as a Data URL so backend receives productImageUrl
-      const imgDataUrl = await readSelectedImageAsDataURL();
+      // Read all selected images and send as an array
+      const imgDataUrls = await readSelectedImagesAsDataURLs();
 
       const body = {
         feedItemId: feedItemId,
         productDescription: rawEl.value.trim() || "",
-        productImageData: imgDataUrl || "",
+        productImageDataList: imgDataUrls,   // ← array of data URLs
         timeStamp: new Date().toISOString()
       };
 
